--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,4 +12,4 @@ html
     footer
       div
         | Copyright © 2017 Poject All Rights Reserved.&nbsp;
-        = link_to 'GitHub', 'https://github.com/yuyataki/poject'
+        = link_to 'GitHub', 'https://github.com/yuyasat/poject'
