--- a/frontend/src/javascripts/poject/components/Grid/Styles.css
+++ b/frontend/src/javascripts/poject/components/Grid/Styles.css
@@ -2,8 +2,13 @@
   float: left;
   width: 30px;
   height: 20px;
-  border: 1px solid #000000;
   white-space: pre-wrap;
+}
+.Top {
+  border: none;
+}
+.Field {
+  border: 1px solid #000000;
 }
 .Grid1 {
   background: #ff0000;
