read poject/index.js from poject_webpacker

--- a/app/views/pages/poject_webpacker.html.slim
+++ b/app/views/pages/poject_webpacker.html.slim
@@ -1,4 +1,4 @@
 h1
   | PojectWebpacker
 div[id="poject"]
-= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+= javascript_pack_tag 'poject/index.js', 'data-turbolinks-track': 'reload'
