comment out application css

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,7 +15,7 @@ html
     meta[name='twitter:site' content='Poject']
     meta[name="twitter:creator" content='@poject']
     meta[property='twitter:image:src' content='https://yourvotes.jp/og-poject.png']
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+    /= stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
   body
     header
